# When-Agentic-LLM-Trust-Poisoned-Tools

./: LICENSE  README.md  pyproject.toml
data/: 500cases_with_real_tools.json  case_assignments.json  tool_audit_log.json
scripts/: calc_overall_pvalue.py  calc_position_stats_10500.py  compute_10500_stats.py  compute_appendix_stats.py  compute_complete_stats.py  compute_pvalues.py  extract_pdfs.py  generate_appendix_v2.py  generate_final_complete_appendix.py  generate_final_merged_appendix_v6.py  generate_nejm_10500_figures.py  generate_nejm_figures.py  generate_publication_figures.py  generate_tools.py  generate_vulnerability_analysis.py  map_cases.py  run_deepseek_experiment.py  run_deepseek_reasoner.py  run_experiment.py  run_gemini_experiment.py  run_groq_experiment.py  run_opensource_experiment.py  run_opensource_mps.py  run_together_experiment.py  scan_full_dataset.py  score_and_report.py  verify_manuscript_stats.py
src/: __init__.py  load_cases.py  prompts.py  report.py  runner.py  sanitize_tools.py  schemas.py  scoring.py  utils.py
